# Trinitty

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  TODO  gitup.py  install_dependencies.sh  pyproject.toml  requirements.txt  trinitty.py
.github/workflows/: publish-pypi.yml
datas/: action.trinity  alt_cmd.trinity  cmd.trinity  conf.trinity  numbers.trinity  update_info.trinity
history/: .gitkeep
keys/: .gitkeep
local_sounds/wakesounds/: index.html
models/: Trinity_en_raspberry-pi_v2_2_0.ppn  interpreteur_fr_raspberry-pi_v3_0_0.ppn  merci_fr_raspberry-pi_v3_0_0.ppn  repete_fr_raspberry-pi_v3_0_0.ppn  trinity_fr_raspberry-pi_v3_0_0.ppn
tests/: test_gitup.py  test_static_regressions.py  test_trinitty_runtime.py
tools/: changerate.py  check_server.py  checkinput.py  checksrate.py  cookies.py  gitup.py  makesound.py  nbr.py  rename.py
tools/tool_history/: add_input_hist.py
